blackJack with server

--- a/GameServer/public/index.html
+++ b/GameServer/public/index.html
@@ -13,13 +13,18 @@
     <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
+<section>
+    <select id="rooms"></select>
+</section>
 <section class="container">
     <input type="button" class="item0" id="score" name="score" value="a" disabled />
 
-    <textarea id="you" class="item1"></textarea>
-    <textarea id="opp" class="item2"></textarea>
-    <input type="button" class="item3" name="more" id="b1" value="draw" >
-    <input type="button" class="item4" name="stop" id="b2" value="stay" >
+
+    <textarea id="dealer" class="item2">  </textarea>
+    <ul id ="players"> </ul>
+
+    <input type="button" class="draw-btn" name="more" id="b1" value="draw" >
+    <input type="button" class="stay-btn" name="stop" id="b2" value="stay" >
 
 </section>
 <input type="button" class="item5" name="new_game" id="b3" value="new Game">
