--- a/GameServer/public/index.html
+++ b/GameServer/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <section>
-    <select id="rooms"></select>
+    <input type="text" id="userName" placeholder="User Name" /><input type="button" id="addUser" value="Add User" />
 </section>
 <section class="container">
     <input type="button" class="item0" id="score" name="score" value="a" disabled />
